Fixed overflow bug with weather elements

--- a/_sass/_weather.scss
+++ b/_sass/_weather.scss
@@ -1,9 +1,10 @@
 .weather-elements {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
   bottom: 0;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .weather-element {
